# Gig-o-Download

./: .gitignore  README.md  _startup.py  download.py  make-csv.py  pyproject.toml
gig_o_download/: __init__.py  download.py  make_csv.py  paths.py
