[tool.poetry]
name = "gig-o-download"
version = "0.1.0"
description = "Downloads gig information from version 2 of the Gig-o-Matic"
authors = ["Sammo Gabay <sammo@sammo.ga>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
