[tool.poetry]
name = "Gig-o-Download"
version = "1.0.0"
description = "Downloads gig information from version 2 of the Gig-o-Matic"
authors = ["Sammo Gabay <sammo@sammo.ga>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{include = "gig_o_download"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.18.1"
platformdirs = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gigo = 'gig_o_download:main'
